[package]
name = "yagg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.8", features = ["cookies", "multipart", "blocking"] }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = { version = "1.0.79", features = [] }
dotenv = "0.15.0"
url = "2.5.0"
urlencoding = "2.1.3"
serde_json = { version = "1.0.113", features = [] }
regex = "1.10.3"
scraper = "0.18.1"
rand = "0.8.5"
log = { version = "0.4.20", features = [] }
teloxide = "0.12.2"
simplelog = "0.12.1"
serde = { version = "1.0.196", features = ["derive"] }
